boreal/tests/assets/invalid_files/compilation/unknown_variable4.yar
// [error: unknown variable $b]
rule a {
    condition:
        #b in (2..3)
}
